--- a/index.html
+++ b/index.html
@@ -63,15 +63,29 @@
     </div>
 <div class="row">
     <div class="column">
-        <img src="bug.JPG" width="100%;">
+        <img src="bug.JPG" width="60%;">
     </div>
     <div class="column">
-        <img src="fast.jpeg" width="100%;">
+        <img src="fast.jpeg" width="70%";>
     </div>
     <div class="column">
         <img src="snow.jpeg" width="100%;">
     </div>
+    <div class="column">
+        <img src="JEEP.HEIC" width="100%;">
+    </div>
+    <div class="column">
+        <img src="TANK.heic" width="100%;">
+    </div>
+    <div class="column">
+        <img src="DO.JPG.heic" width="100%;">
+    </div>
+
+
+
+
 </div>
+
 
 
 </body>
