--- a/index.html
+++ b/index.html
@@ -80,6 +80,24 @@
     <div class="column">
         <img src="DO.JPG.heic" width="100%;">
     </div>
+    <div class="column">
+        <img src="IMG_5123.heic" width="100%;">
+    </div>
+    <div class="column">
+        <img src="IMG_5243.heic" width="100%;">
+    </div>
+    <div class="column">
+        <img src="IMG_5913.heic" width="100%;">
+    </div>
+    <div class="column">
+        <img src="IMG_6683.JPG" width="100%;">
+    </div>
+    <div class="column">
+        <img src="MUS.JPG" width="100%;">
+    </div>
+    <div class="column">
+        <img src="TRAC.JPEG" width="100%;">
+    </div>
 
 
 
